--- a/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "aOhW6CUz1qIm"
       },
@@ -63,12 +63,12 @@
       "metadata": {
         "id": "MrdPt-v_mr9U"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "YxH7dpgiDsUN"
       },
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "PRDMnjsF5_JS"
       },
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -180,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "3RFWd8GDC4g9",
         "tags": [
@@ -226,7 +226,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -335,7 +335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -430,7 +430,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "ByNK-uLo5tfh"
       },
@@ -453,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "o0ufgeVFnlCm"
       },
@@ -512,7 +512,7 @@
       "metadata": {
         "id": "cmvzX809tGxM"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -531,7 +531,7 @@
           "height": 940
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1136,7 +1136,7 @@
       "metadata": {
         "id": "DaY8pJm7UXMm"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1170,47 +1170,16 @@
       "metadata": {
         "id": "aiDObu4bwmXl"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# from tqdm import tqdm\n",
-        "# import multiprocessing\n",
-        "# from functools import partial\n",
-        "\n",
-        "# def process_mask(seg_file, ct_file, label_id_body_part_df, label):\n",
-        "#     mask_name, mask_stats = get_radiomics_features(seg_file, ct_file, label=label)\n",
-        "#     mask_stats = {k: v.tolist() if isinstance(v, np.ndarray) else v for k, v in mask_stats.items()}\n",
-        "#     body_part = label_id_body_part_df.loc[label_id_body_part_df['label_id'] == label]['body_part'].values[0]\n",
-        "#     return (body_part, mask_stats)\n",
-        "\n",
-        "# def get_radiomics_features_for_all_labels(ct_file: Path, seg_file: Path, file_out: Path):\n",
-        "#     label_id_body_part_data = map_to_binary.class_map['total'].items()\n",
-        "#     # create a DataFrame from the extracted data\n",
-        "#     label_id_body_part_df = pd.DataFrame(label_id_body_part_data, columns=['label_id', 'body_part'])\n",
-        "#     stats = {}\n",
-        "#     labels = [int(x) for x in np.unique(nib.load(seg_file).get_fdata()).tolist() if x != 0]\n",
-        "#     with multiprocessing.Pool() as pool:\n",
-        "#         func = partial(process_mask, seg_file, ct_file, label_id_body_part_df)\n",
-        "#         results = list(tqdm(pool.imap(func, labels), total=len(labels)))\n",
-        "#     for body_part, mask_stats in results:\n",
-        "#         stats[body_part] = mask_stats\n",
-        "#     with open(file_out, \"w\") as f:\n",
-        "#         json.dump(stats, f, indent=4)"
-      ],
-      "metadata": {
-        "id": "6LCqiBFcfZqT"
-      },
-      "execution_count": 17,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from concurrent.futures import ThreadPoolExecutor\n",
         "from tqdm import tqdm\n",
+        "import multiprocessing\n",
+        "from functools import partial\n",
+        "\n",
         "def process_mask(seg_file, ct_file, label_id_body_part_df, label):\n",
         "    mask_name, mask_stats = get_radiomics_features(seg_file, ct_file, label=label)\n",
         "    mask_stats = {k: v.tolist() if isinstance(v, np.ndarray) else v for k, v in mask_stats.items()}\n",
@@ -1223,23 +1192,54 @@
         "    label_id_body_part_df = pd.DataFrame(label_id_body_part_data, columns=['label_id', 'body_part'])\n",
         "    stats = {}\n",
         "    labels = [int(x) for x in np.unique(nib.load(seg_file).get_fdata()).tolist() if x != 0]\n",
-        "    with ThreadPoolExecutor() as executor:\n",
+        "    with multiprocessing.Pool() as pool:\n",
         "        func = partial(process_mask, seg_file, ct_file, label_id_body_part_df)\n",
-        "        results = list(tqdm(executor.map(func, labels), total=len(labels)))\n",
+        "        results = list(tqdm(pool.imap(func, labels), total=len(labels)))\n",
         "    for body_part, mask_stats in results:\n",
         "        stats[body_part] = mask_stats\n",
         "    with open(file_out, \"w\") as f:\n",
         "        json.dump(stats, f, indent=4)"
       ],
       "metadata": {
-        "id": "3ctV2LN2h-kt"
+        "id": "6LCqiBFcfZqT"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "source": [
+        "# from concurrent.futures import ThreadPoolExecutor\n",
+        "# from tqdm import tqdm\n",
+        "# def process_mask(seg_file, ct_file, label_id_body_part_df, label):\n",
+        "#     mask_name, mask_stats = get_radiomics_features(seg_file, ct_file, label=label)\n",
+        "#     mask_stats = {k: v.tolist() if isinstance(v, np.ndarray) else v for k, v in mask_stats.items()}\n",
+        "#     body_part = label_id_body_part_df.loc[label_id_body_part_df['label_id'] == label]['body_part'].values[0]\n",
+        "#     return (body_part, mask_stats)\n",
+        "\n",
+        "# def get_radiomics_features_for_all_labels(ct_file: Path, seg_file: Path, file_out: Path):\n",
+        "#     label_id_body_part_data = map_to_binary.class_map['total'].items()\n",
+        "#     # create a DataFrame from the extracted data\n",
+        "#     label_id_body_part_df = pd.DataFrame(label_id_body_part_data, columns=['label_id', 'body_part'])\n",
+        "#     stats = {}\n",
+        "#     labels = [int(x) for x in np.unique(nib.load(seg_file).get_fdata()).tolist() if x != 0]\n",
+        "#     with ThreadPoolExecutor() as executor:\n",
+        "#         func = partial(process_mask, seg_file, ct_file, label_id_body_part_df)\n",
+        "#         results = list(tqdm(executor.map(func, labels), total=len(labels)))\n",
+        "#     for body_part, mask_stats in results:\n",
+        "#         stats[body_part] = mask_stats\n",
+        "#     with open(file_out, \"w\") as f:\n",
+        "#         json.dump(stats, f, indent=4)"
+      ],
+      "metadata": {
+        "id": "3ctV2LN2h-kt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "s_xmbQMgNN5H"
       },
@@ -1256,7 +1256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "FTPLJHOeNN5I"
       },
@@ -1268,7 +1268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "5r_ShPVDNN5I"
       },
@@ -1303,7 +1303,7 @@
       "metadata": {
         "id": "LuYIqIIgilyZ"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1369,7 +1369,7 @@
       "metadata": {
         "id": "NH_cs3nYRV5v"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1571,12 +1571,12 @@
       "metadata": {
         "id": "cH6G9RDcPjzs"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "xwRE4F8AmscK"
       },
@@ -1706,7 +1706,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "_rMtxR77N_RH"
       },
@@ -1762,7 +1762,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "w_-jEmCgKJBe",
         "colab": {
@@ -2019,7 +2019,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
