--- a/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -1176,41 +1176,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# from tqdm import tqdm\n",
-        "# import multiprocessing\n",
-        "# from functools import partial\n",
-        "\n",
-        "# def process_mask(seg_file, ct_file, label_id_body_part_df, label):\n",
-        "#     mask_name, mask_stats = get_radiomics_features(seg_file, ct_file, label=label)\n",
-        "#     mask_stats = {k: v.tolist() if isinstance(v, np.ndarray) else v for k, v in mask_stats.items()}\n",
-        "#     body_part = label_id_body_part_df.loc[label_id_body_part_df['label_id'] == label]['body_part'].values[0]\n",
-        "#     return (body_part, mask_stats)\n",
-        "\n",
-        "# def get_radiomics_features_for_all_labels(ct_file: Path, seg_file: Path, file_out: Path):\n",
-        "#     label_id_body_part_data = map_to_binary.class_map['total'].items()\n",
-        "#     # create a DataFrame from the extracted data\n",
-        "#     label_id_body_part_df = pd.DataFrame(label_id_body_part_data, columns=['label_id', 'body_part'])\n",
-        "#     stats = {}\n",
-        "#     labels = [int(x) for x in np.unique(nib.load(seg_file).get_fdata()).tolist() if x != 0]\n",
-        "#     with multiprocessing.Pool() as pool:\n",
-        "#         func = partial(process_mask, seg_file, ct_file, label_id_body_part_df)\n",
-        "#         results = list(tqdm(pool.imap(func, labels), total=len(labels)))\n",
-        "#     for body_part, mask_stats in results:\n",
-        "#         stats[body_part] = mask_stats\n",
-        "#     with open(file_out, \"w\") as f:\n",
-        "#         json.dump(stats, f, indent=4)"
-      ],
-      "metadata": {
-        "id": "6LCqiBFcfZqT"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from concurrent.futures import ThreadPoolExecutor\n",
         "from tqdm import tqdm\n",
+        "import multiprocessing\n",
+        "from functools import partial\n",
+        "\n",
         "def process_mask(seg_file, ct_file, label_id_body_part_df, label):\n",
         "    mask_name, mask_stats = get_radiomics_features(seg_file, ct_file, label=label)\n",
         "    mask_stats = {k: v.tolist() if isinstance(v, np.ndarray) else v for k, v in mask_stats.items()}\n",
@@ -1223,13 +1192,44 @@
         "    label_id_body_part_df = pd.DataFrame(label_id_body_part_data, columns=['label_id', 'body_part'])\n",
         "    stats = {}\n",
         "    labels = [int(x) for x in np.unique(nib.load(seg_file).get_fdata()).tolist() if x != 0]\n",
-        "    with ThreadPoolExecutor() as executor:\n",
+        "    with multiprocessing.Pool() as pool:\n",
         "        func = partial(process_mask, seg_file, ct_file, label_id_body_part_df)\n",
-        "        results = list(tqdm(executor.map(func, labels), total=len(labels)))\n",
+        "        results = list(tqdm(pool.imap(func, labels), total=len(labels)))\n",
         "    for body_part, mask_stats in results:\n",
         "        stats[body_part] = mask_stats\n",
         "    with open(file_out, \"w\") as f:\n",
         "        json.dump(stats, f, indent=4)"
+      ],
+      "metadata": {
+        "id": "6LCqiBFcfZqT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# from concurrent.futures import ThreadPoolExecutor\n",
+        "# from tqdm import tqdm\n",
+        "# def process_mask(seg_file, ct_file, label_id_body_part_df, label):\n",
+        "#     mask_name, mask_stats = get_radiomics_features(seg_file, ct_file, label=label)\n",
+        "#     mask_stats = {k: v.tolist() if isinstance(v, np.ndarray) else v for k, v in mask_stats.items()}\n",
+        "#     body_part = label_id_body_part_df.loc[label_id_body_part_df['label_id'] == label]['body_part'].values[0]\n",
+        "#     return (body_part, mask_stats)\n",
+        "\n",
+        "# def get_radiomics_features_for_all_labels(ct_file: Path, seg_file: Path, file_out: Path):\n",
+        "#     label_id_body_part_data = map_to_binary.class_map['total'].items()\n",
+        "#     # create a DataFrame from the extracted data\n",
+        "#     label_id_body_part_df = pd.DataFrame(label_id_body_part_data, columns=['label_id', 'body_part'])\n",
+        "#     stats = {}\n",
+        "#     labels = [int(x) for x in np.unique(nib.load(seg_file).get_fdata()).tolist() if x != 0]\n",
+        "#     with ThreadPoolExecutor() as executor:\n",
+        "#         func = partial(process_mask, seg_file, ct_file, label_id_body_part_df)\n",
+        "#         results = list(tqdm(executor.map(func, labels), total=len(labels)))\n",
+        "#     for body_part, mask_stats in results:\n",
+        "#         stats[body_part] = mask_stats\n",
+        "#     with open(file_out, \"w\") as f:\n",
+        "#         json.dump(stats, f, indent=4)"
       ],
       "metadata": {
         "id": "3ctV2LN2h-kt"
