--- a/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "aOhW6CUz1qIm"
       },
@@ -63,12 +63,12 @@
       "metadata": {
         "id": "MrdPt-v_mr9U"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "YxH7dpgiDsUN"
       },
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "PRDMnjsF5_JS"
       },
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "3RFWd8GDC4g9",
         "tags": [
@@ -232,7 +232,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -341,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -376,7 +376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -436,7 +436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "ByNK-uLo5tfh"
       },
@@ -459,7 +459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "o0ufgeVFnlCm"
       },
@@ -518,7 +518,7 @@
       "metadata": {
         "id": "cmvzX809tGxM"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -537,7 +537,7 @@
           "height": 1000
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1142,7 +1142,7 @@
       "metadata": {
         "id": "DaY8pJm7UXMm"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1176,7 +1176,7 @@
       "metadata": {
         "id": "aiDObu4bwmXl"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1231,7 +1231,7 @@
       "metadata": {
         "id": "6LCqiBFcfZqT"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1262,12 +1262,12 @@
       "metadata": {
         "id": "3ctV2LN2h-kt"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "s_xmbQMgNN5H"
       },
@@ -1284,7 +1284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "FTPLJHOeNN5I"
       },
@@ -1296,7 +1296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "5r_ShPVDNN5I"
       },
@@ -1331,7 +1331,7 @@
       "metadata": {
         "id": "LuYIqIIgilyZ"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1397,7 +1397,7 @@
       "metadata": {
         "id": "NH_cs3nYRV5v"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1552,7 +1552,7 @@
         "      measurement_dict[\"units\"][\"CodeMeaning\"] = str(feature_row[\"units_CodeMeaning\"].values[0])\n",
         "      measurement_dict[\"measurementAlgorithmIdentification\"] = {}\n",
         "      measurement_dict[\"measurementAlgorithmIdentification\"][\"AlgorithmName\"] = \"pyradiomics v3.0.1\"\n",
-        "      measurement_dict[\"measurementAlgorithmIdentification\"][\"AlgorithmVersion\"] = str(pyradiomics_version_number)\n",
+        "      #measurement_dict[\"measurementAlgorithmIdentification\"][\"AlgorithmVersion\"] = str(pyradiomics_version_number)\n",
         "      #measurement_dict[\"measurementAlgorithmIdentification\"][\"Algorithm\"] = \"pyradiomics v3.0.1\"\n",
         "      measurement.append(measurement_dict) \n",
         "\n",
@@ -1600,12 +1600,12 @@
       "metadata": {
         "id": "cH6G9RDcPjzs"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "xwRE4F8AmscK"
       },
@@ -1744,7 +1744,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "_rMtxR77N_RH"
       },
