--- a/Notebooks/Totalsegmentator/executionAnalytics/Terra-Cromwell Workflow Metadata.ipynb
+++ b/Notebooks/Totalsegmentator/executionAnalytics/Terra-Cromwell Workflow Metadata.ipynb
@@ -66,7 +66,7 @@
       "metadata": {
         "id": "lUWS2Tu-xfD4"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "2UUz2NNyxNmN"
       },
@@ -104,7 +104,7 @@
       "metadata": {
         "id": "ICEnpfMQzdVD"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "3bnyqTDRxNmQ"
       },
@@ -212,7 +212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "colab": {
@@ -297,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -5872,6 +5872,7 @@
         "                                'end': attempt['end'],\n",
         "                                'start': attempt['start'],\n",
         "                                'executionStatus': attempt['executionStatus'],\n",
+        "                                'failures': attempt.get('failures','default'),\n",
         "                                'executionBucket': attempt['jes']['executionBucket'],\n",
         "                                'googleProject': attempt['jes']['googleProject'],\n",
         "                                'instanceName': attempt['jes']['instanceName'],\n",
@@ -5891,7 +5892,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "9osQ4Xw8xNmT"
       },
