--- a/Notebooks/Totalsegmentator/downloadDicomAndConvertNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/downloadDicomAndConvertNotebook.ipynb
@@ -111,6 +111,7 @@
       ],
       "source": [
         "import os\n",
+        "import csv\n",
         "import sys\n",
         "import time\n",
         "import pandas as pd\n",
@@ -818,20 +819,35 @@
       },
       "outputs": [],
       "source": [
-        "import os\n",
-        "import csv\n",
         "\n",
+        "# def check_dcm2niix_errors(path):\n",
+        "#     for series_id in os.listdir(path):\n",
+        "#         series_id_path = os.path.join(path, series_id)\n",
+        "#         if os.path.isdir(series_id_path):\n",
+        "#             num_files = len([f for f in os.listdir(series_id_path) if os.path.isfile(os.path.join(series_id_path, f))])\n",
+        "#             if num_files > 1:\n",
+        "#                 print(f'Found one more than one nifti for the {series_id}')\n",
+        "#                 with open('dcm2niix_errors.csv', 'a') as csvfile:\n",
+        "#                     writer = csv.writer(csvfile)\n",
+        "#                     writer.writerow([series_id])\n",
+        "#                 shutil.rmtree(f'dcm2niix/{series_id}')\n",
         "def check_dcm2niix_errors(path):\n",
         "    for series_id in os.listdir(path):\n",
         "        series_id_path = os.path.join(path, series_id)\n",
         "        if os.path.isdir(series_id_path):\n",
         "            num_files = len([f for f in os.listdir(series_id_path) if os.path.isfile(os.path.join(series_id_path, f))])\n",
-        "            if num_files > 1:\n",
-        "                print(f'Found one more than one nifti for the {series_id}')\n",
+        "            if num_files == 0:\n",
+        "                print(f'No NIfTI files found for {series_id}')\n",
         "                with open('dcm2niix_errors.csv', 'a') as csvfile:\n",
         "                    writer = csv.writer(csvfile)\n",
         "                    writer.writerow([series_id])\n",
-        "                shutil.rmtree(f'dcm2niix/{series_id}')\n"
+        "                shutil.rmtree(f'dcm2niix/{series_id}')\n",
+        "            elif num_files > 1:\n",
+        "                print(f'Found more than one NIfTI file for {series_id}')\n",
+        "                with open('dcm2niix_errors.csv', 'a') as csvfile:\n",
+        "                    writer = csv.writer(csvfile)\n",
+        "                    writer.writerow([series_id])\n",
+        "                shutil.rmtree(f'dcm2niix/{series_id}')"
       ]
     },
     {
