--- a/Notebooks/Totalsegmentator/endToEndTotalSegmentatorNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/endToEndTotalSegmentatorNotebook.ipynb
@@ -110,6 +110,22 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# %%capture\n",
+        "# #install dcm2niix\n",
+        "# !wget \"https://github.com/rordenlab/dcm2niix/releases/download/v1.0.20230411/dcm2niix_lnx.zip\"\n",
+        "# !unzip \"dcm2niix_lnx.zip\"\n",
+        "# !rm \"dcm2niix_lnx.zip\"\n",
+        "# !mv dcm2niix /usr/local/bin/dcm2niix"
+      ],
+      "metadata": {
+        "id": "yUvUSnwyuYAV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "###**Importing Packages**"
