--- a/Notebooks/Totalsegmentator/postProcessingExtractPerframe.ipynb
+++ b/Notebooks/Totalsegmentator/postProcessingExtractPerframe.ipynb
@@ -122,7 +122,7 @@
       },
       "outputs": [],
       "source": [
-        "data= pd.read_table(segFilesCsv)\n",
+        "data= pd.read_csv(segFilesCsv)\n",
         "data"
       ]
     },
